Create article controller, article view models, categories service and article service.

--- a/MMA_News_BG/Web/MMA_News_BG.Web/Views/Home/Index.cshtml
+++ b/MMA_News_BG/Web/MMA_News_BG.Web/Views/Home/Index.cshtml
@@ -4,6 +4,28 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to @GlobalConstants.SystemName.Replace('_', ' ')!</h1>
+    <img class="rounded" style="height: 300px; width: 300px;"  src="https://res.cloudinary.com/dka5uzl0n/image/upload/v1590619238/101133055_567172630654787_3893557962037700256_n_u7q8lx.jpg" />
+
+    <div class="d-flex justify-content-between mt-5">
+        <div class="col-3">
+            <h5 class="font-weight-bold">Big UFC News Here</h5>
+            <img style="height: 150px; width: 200px;" src="https://res.cloudinary.com/dka5uzl0n/image/upload/v1590619238/101133055_567172630654787_3893557962037700256_n_u7q8lx.jpg" />
+        </div>
+
+        <div class="col-3">
+            <h5 class="font-weight-bold">Big Bellator News Here</h5>
+            <img style="height: 150px; width: 200px;" src="https://res.cloudinary.com/dka5uzl0n/image/upload/v1590619238/101133055_567172630654787_3893557962037700256_n_u7q8lx.jpg" />
+        </div>
+
+        <div class="col-3">
+            <h5 class="font-weight-bold">The Best Prediction Here</h5>
+            <img style="height: 150px; width: 200px;" src="https://res.cloudinary.com/dka5uzl0n/image/upload/v1590619238/101133055_567172630654787_3893557962037700256_n_u7q8lx.jpg" />
+        </div>
+
+        <div class="col-3">
+            <h5 class="font-weight-bold">Some interesting Here</h5>
+            <img style="height: 150px; width: 200px;" src="https://res.cloudinary.com/dka5uzl0n/image/upload/v1590619238/101133055_567172630654787_3893557962037700256_n_u7q8lx.jpg" />
+        </div>
+    </div>
 </div>
