Implement add article functionality. Improve design.

--- a/MMA_News_BG/Web/MMA_News_BG.Web/Views/Shared/_Layout.cshtml
+++ b/MMA_News_BG/Web/MMA_News_BG.Web/Views/Shared/_Layout.cshtml
@@ -9,36 +9,40 @@
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true" />
     <link href="~/css/site.min.css" rel="stylesheet" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css">
+    <link rel="stylesheet" href="~/css/footer.css" />
+    <link rel="stylesheet" href="~/css/header.css" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body class="text-white">
-    <header id="head-part" class="d-flex">
-            <ul id="navigation" class="d-flex mx-auto col-6 justify-content-around p-2 my-3 font-weight-bold rounded text-white">
-                <li class="navigation-link">Home</li>
-                <li class="navigation-link">UFC</li>
-                <li class="navigation-link">News</li>
-                <li class="navigation-link">Bellator</li>
-            </ul>
+    <header id="head-part" class="d-flex justify-content-around col-10 mx-auto">
+        <span class="mt-4 header-elements font-weight-bold">MMA News BG</span>
+
+        <ul id="navigation" class="d-flex mx-auto col-6 justify-content-around p-2 my-3 font-weight-bold rounded text-white">
+            <li class="navigation-link">Home</li>
+            <li class="navigation-link">UFC</li>
+            <li class="navigation-link">News</li>
+            <li class="navigation-link">Bellator</li>
+        </ul>
+
+        <a class="header-elements mt-4" asp-controller="Articles" asp-action="Create">Add Article</a>
     </header>
     
-    <div class="container">
+    <div class="container my-2 col-10">
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @this.RenderBody()
         </main>
     </div>
     
-    <footer class="border-top footer text-muted">
-        <div id="footer-part" class="d-flex justify-content-around">
-            <span id="footer-part">
-                &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer id="footer-part" class="py-3 d-flex justify-content-around text-muted col-10 mx-auto">
+            <span class="footer-elements">
+                &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a class="footer-elements" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </span>
 
-            <span id="footer-part">
+            <span class="footer-elements">
                 mmanewsbg@gmail.com
             </span>
-        </div>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
