--- a/MMA_News_BG/Web/MMA_News_BG.Web/Views/Home/Index.cshtml
+++ b/MMA_News_BG/Web/MMA_News_BG.Web/Views/Home/Index.cshtml
@@ -9,22 +9,22 @@
 
     <div class="d-flex justify-content-between mt-5">
         <div class="col-3">
-            <h5 class="font-weight-bold">Big UFC News Here</h5>
+            <h5 class="font-weight-bold">UFC</h5>
             <img style="height: 150px; width: 200px;" src="https://res.cloudinary.com/dka5uzl0n/image/upload/v1590619238/101133055_567172630654787_3893557962037700256_n_u7q8lx.jpg" />
         </div>
 
         <div class="col-3">
-            <h5 class="font-weight-bold">Big Bellator News Here</h5>
+            <h5 class="font-weight-bold">Bellator</h5>
             <img style="height: 150px; width: 200px;" src="https://res.cloudinary.com/dka5uzl0n/image/upload/v1590619238/101133055_567172630654787_3893557962037700256_n_u7q8lx.jpg" />
         </div>
 
         <div class="col-3">
-            <h5 class="font-weight-bold">The Best Prediction Here</h5>
+            <h5 class="font-weight-bold">Prediction</h5>
             <img style="height: 150px; width: 200px;" src="https://res.cloudinary.com/dka5uzl0n/image/upload/v1590619238/101133055_567172630654787_3893557962037700256_n_u7q8lx.jpg" />
         </div>
 
         <div class="col-3">
-            <h5 class="font-weight-bold">Some interesting Here</h5>
+            <h5 class="font-weight-bold">Funny</h5>
             <img style="height: 150px; width: 200px;" src="https://res.cloudinary.com/dka5uzl0n/image/upload/v1590619238/101133055_567172630654787_3893557962037700256_n_u7q8lx.jpg" />
         </div>
     </div>
